--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .header {
   position: fixed;
@@ -16,7 +17,7 @@
   justify-content: space-evenly;
   margin-top: 230px;
   margin-left: 35%;
-  animation: conveyor 10s forwards 0.5s linear infinite alternate-reverse;
+  animation: conveyor 10s forwards 0.5s linear infinite;
 }
 @keyframes conveyor {
   0% {
@@ -25,6 +26,16 @@
   100% {
     margin-left: -150%;
   }
+}
+.scoreCard {
+  width:80%;
+  display:flex;
+  margin:auto;
+  justify-content: space-between;
+  
+  background-color: darkorange;
+  color:black;
+  padding: 10px;
 }
 
 img {
