--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,38 @@
 .App {
   text-align: center;
+  background-color: rgb(42, 44, 44);
+  color:rgb(202, 196, 196);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body {
+  margin:0;
+  padding:0;
+  background-color: rgb(42, 44, 44);
 }
 .header {
   position: fixed;
-  top: 20px;
+  top: 70px;
   left: 30%;
+}
+.rollers {
+  width:100%;
+  display:flex;
+  justify-content: space-evenly;
+}
+.roll {
+  border: 1px solid black;
+  border-radius: 50%;
+  width:20px;
+  height:20px;
+  animation: rotate 15s forwards 0.5s linear infinite alternate-reverse;
+}
+@keyframes rotate {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
 }
 .container {
   position: relative;
@@ -17,7 +44,8 @@
   justify-content: space-evenly;
   margin-top: 230px;
   margin-left: 35%;
-  animation: conveyor 10s forwards 0.5s linear infinite;
+  animation: conveyor 15s forwards 0.5s linear infinite alternate-reverse;
+  border-bottom: dotted 5px rgb(122, 121, 121);
 }
 @keyframes conveyor {
   0% {
@@ -32,12 +60,37 @@
   display:flex;
   margin:auto;
   justify-content: space-between;
-  
+  padding-left:10%;
+  padding-right:10%;
   background-color: darkorange;
-  color:black;
-  padding: 10px;
+  color:rgb(49, 49, 49);
+ 
 }
-
+.winnerBox {
+  position: absolute;
+  z-index:5;
+  font-size: xx-large;
+  background-color: darkorange;
+  color:rgb(49, 49, 49);
+  top:38%;
+  margin:0;
+  width:100%;
+  height:400px;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
 img {
   width: 200px;
+}
+.card {
+  border:solid red 5px;
+  width:260px;
+  height:300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding:10px;
+  margin-left:10px;
 }
